Return date text pipe

--- a/src/app/reserve/reserve.component.html
+++ b/src/app/reserve/reserve.component.html
@@ -8,7 +8,7 @@
                 @for (book of availableBooks; track book) {
                 <mat-option [value]="book.name" [disabled]="!book.available">
                     {{book.name}}
-                    {{!book.available ? ' will be returned on ' + book.endDate : ''}}
+                    {{!book.available ? ' will be returned on ' + (book.endDate | date: 'dd/MM/yyyy') : ''}}
                 </mat-option>
                 }
             </mat-select>
@@ -17,7 +17,6 @@
         <mat-form-field appearance="outline">
             <mat-label>Start Date</mat-label>
             <input matInput [matDatepicker]="startDate" formControlName="startDate" autocomplete="off" />
-            <mat-hint>dd/mm/aaaa</mat-hint>
             <mat-datepicker-toggle matIconSuffix [for]="startDate"></mat-datepicker-toggle>
             <mat-datepicker #startDate></mat-datepicker>
         </mat-form-field>
@@ -25,7 +24,6 @@
         <mat-form-field appearance="outline">
             <mat-label>End Date</mat-label>
             <input matInput [matDatepicker]="endDate" formControlName="endDate" autocomplete="off" />
-            <mat-hint>dd/mm/aaaa</mat-hint>
             <mat-datepicker-toggle matIconSuffix [for]="endDate"></mat-datepicker-toggle>
             <mat-datepicker #endDate></mat-datepicker>
         </mat-form-field>
